test fix z-index 2

--- a/access/css/main.css
+++ b/access/css/main.css
@@ -42,6 +42,7 @@ body{
     top: 0;
     right: 0;
     left: 0;
+    z-index: 10;
 }
 .cd-info{
     text-align: center;
